welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:14: error: not found: value max1
      if (nums(i)>max1)
                  ^max2Value:16: error: not found: value max2
        max2 = max1;
        ^max2Value:17: error: not found: value max1
        max1 = nums(i)
        ^max2Value:21: error: not found: value max2
  return max2 }
         ^